--- a/index.html
+++ b/index.html
@@ -2,16 +2,15 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>hi friends :)</title>
+    <title>i am vvrm</title>
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <style>html,body{height:100%;margin:0;display:grid;place-items:center;font:16px system-ui}</style>
   </head>
   <body>
     <main>
-      <h1>Hello, world 👋</h1>
-      <p>Welcome to my corner of the internet.</p>
-      <!-- drop an image in the repo (e.g., /img/me.jpg) and link it: -->
-      <!-- <img src="img/me.jpg" alt="me" width="320"> -->
+      <h1>hello vvorld</h1>
+      <p>vvelcome to this vvork in progress</p>
+      <img src="img/me.jpeg" alt="vvrm" width="320">
     </main>
   </body>
 </html>
