--- a/index.html
+++ b/index.html
@@ -1,16 +1,28 @@
 <!doctype html>
 <html>
-  <head>
+
+<head>
     <meta charset="utf-8" />
     <title>i am vvrm</title>
     <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <style>html,body{height:100%;margin:0;display:grid;place-items:center;font:16px system-ui}</style>
-  </head>
-  <body>
+    <style>
+        html,
+        body {
+            height: 100%;
+            margin: 0;
+            display: grid;
+            place-items: center;
+            font: 16px system-ui
+        }
+    </style>
+</head>
+
+<body>
     <main>
-      <h1>hello vvorld</h1>
-      <p>vvelcome to this vvork in progress</p>
-      <img src="img/me.jpeg" alt="vvrm" width="320">
+        <h1>hello vvorld</h1>
+        <p>vvelcome to this vvork in progress</p>
+        <img src="img/me.jpeg" alt="vvrm" width="320">
     </main>
-  </body>
+</body>
+
 </html>
