--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             margin: 0;
             display: grid;
             place-items: center;
-            font: 16px system-ui
+            font-family: 'Courier New', monospace;
         }
     </style>
 </head>
